--- a/source/index.html
+++ b/source/index.html
@@ -431,8 +431,8 @@
           </ul>
         </div>
         <a class="countries__all-countries button button--arrow" href="allcountries.html">
-          <span class="button__caption">Показать все</span>
-          <svg class="button__icon" width="11" height="12" viewBox="0 0 11 12" fill="none"
+          <span class="button__caption button--padding-left">Показать все</span>
+          <svg class="button__icon button--padding-right" width="11" height="12" viewBox="0 0 11 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M10.0698 6.07495L0.157238 11.7041L0.157238 0.445786L10.0698 6.07495Z" fill="#1D2E5B" />
           </svg>
@@ -467,9 +467,20 @@
                   <img class="users__photo" src="img/tany-photo.png" srcset="img/tany-photo@2x.png 2x" width="226"
                     height="30" alt="Фото Тани Фирсовой" />
                 </picture>
-                <div class="users__level ">
-                  <b class="text users__level-number">99</b>
-                  <span class="text users__level-text">level</span>
+                <div class="users__level general-info__level">
+                  <svg class="general-info__level-icon" width="60" height="60" viewBox="0 0 60 60"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="30" cy="30" r="30" fill-opacity="0.6" />
+                    <path class="users__level-icon"
+                      d="M22.5503 3.00922C15.7757 4.87906 9.95203 9.22814 6.23551 15.1929C2.51899 21.1577 1.18146 28.302 2.48848 35.2073C3.7955 42.1126 7.65149 48.2739 13.2908 52.4678C18.9302 56.6618 25.9405 58.5817 32.9298 57.8463C39.9191 57.1109 46.3763 53.7741 51.0193 48.4983C55.6623 43.2226 58.1516 36.3937 57.9929 29.3676C57.8341 22.3415 55.039 15.632 50.1625 10.5713C45.2859 5.51057 38.6846 2.46876 31.6692 2.0498" />
+                    <text class="users__level-number general-info__level-number" x="17" y="27">
+                      99
+                    </text>
+                    <line class="users__level-line general-info__level-line" x1="10" y1="33" x2="50" y2="33"
+                      stroke="black" />
+                    <text class="users__level-text general-info__level-text" x="15" y="47">level</text>
+                    Sorry, your browser does not support inline SVG.
+                  </svg>
                 </div>
                 <div class="users__card-info card-list__info">
                   <ul class="users__flags card-list__flags">
@@ -595,9 +606,20 @@
                   <img class="users__photo" src="img/demin-photo.png" srcset="img/demin-photo@2x.png 2x" width="226"
                     height="30" alt="Фото Петра Демина" />
                 </picture>
-                <div class="users__level">
-                  <b class="text users__level-number">80</b>
-                  <span class="text users__level-text">level</span>
+                <div class="users__level general-info__level">
+                  <svg class="general-info__level-icon" width="60" height="60" viewBox="0 0 60 60"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <circle cx="30" cy="30" r="30" fill-opacity="0.6" />
+                    <path class="users__level-icon"
+                      d="M4.74236 17.9148C2.16557 23.3002 1.37757 29.3683 2.4934 35.2332C3.60922 41.0982 6.57045 46.4529 10.9448 50.5159C15.3192 54.5788 20.8777 57.1372 26.8089 57.8176C32.7402 58.498 38.7336 57.2647 43.9144 54.2979C49.0952 51.3311 53.1921 46.786 55.607 41.3261C58.022 35.8662 58.6285 29.7773 57.3382 23.9483C56.0478 18.1193 52.9282 12.8553 48.4345 8.92466C43.9408 4.99408 38.3084 2.6027 32.3595 2.0996" />
+                    <text class="users__level-number general-info__level-number" x="17" y="27">
+                      80
+                    </text>
+                    <line class="users__level-line general-info__level-line" x1="10" y1="33" x2="50" y2="33"
+                      stroke="black" />
+                    <text class="users__level-text general-info__level-text" x="15" y="47">level</text>
+                    Sorry, your browser does not support inline SVG.
+                  </svg>
                 </div>
                 <div class="users__card-info card-list__info">
                   <ul class="users__flags card-list__flags">
@@ -709,8 +731,8 @@
           </ul>
         </div>
         <a class="countries__all-countries button button--arrow" href="allcountries.html">
-          <span class="button__caption">Показать всех</span>
-          <svg class="button__icon" width="11" height="12" viewBox="0 0 11 12" fill="none"
+          <span class="button__caption button--padding-left">Показать всех</span>
+          <svg class="button__icon button--padding-right" width="11" height="12" viewBox="0 0 11 12" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <path d="M10.0698 6.07495L0.157238 11.7041L0.157238 0.445786L10.0698 6.07495Z" fill="#1D2E5B" />
           </svg>
@@ -723,16 +745,18 @@
           <h2 class="profile__caption text text--caption">Добавьте <br class="profile__br">свой <br
               class="profile__br">профиль</h2>
         </header>
-        <picture>
-          <source media="(min-width: 1440px)" srcset="img/rates-large.png 1x, img/rates-large@2x.png 2x">
-          <img class="profile__rates" src="img/rates-small.png" srcset="img/rates-small@2x.png 2x" width="100"
-            height="100" alt="Диапозон цен" />
-        </picture>
         <ol class="profile__list information-list">
           <li class="profile__information information-list__item information-list__item--digital-dark-theme">
             <div class="profile__price">
-              <span
-                class="profile__price-digital icon icon--background-padding icon--middle-background text text--default">1</span>
+              <div
+                class="profile__price-digital icon icon--background-padding icon--middle-background text text--default">
+                1
+                <picture>
+                  <source media="(min-width: 1440px)" srcset="img/rates-large.png 1x, img/rates-large@2x.png 2x">
+                  <img class="profile__rates" src="img/rates-small.png" srcset="img/rates-small@2x.png 2x" width="100"
+                    height="100" alt="Диапозон цен" />
+                </picture>
+              </div>
               <span class="text information-list__description--small">
                 Базовое размещение
               </span>
@@ -795,7 +819,7 @@
           </button>
         </form>
         <p class="text feedback__any-questions">
-          Остались вопросы?<br>
+          Остались вопросы?<br class="feedback__any-questions-br">
           Мы с радостью на них ответим!
         </p>
         <dl class="feedback__list icon-list">
@@ -840,8 +864,9 @@
             </div>
           </dl>
           <a class="contacts__build-way button button--arrow" href="businesstarifs.html">
-            <span class="contacts__wat-text text button__caption button__caption--light">Проложить маршрут</span>
-            <svg class="button__icon" width="11" height="12" viewBox="0 0 11 12" fill="none"
+            <span class="contacts__wat-text text button__caption button__caption--light button--padding-left">Проложить
+              маршрут</span>
+            <svg class="button__icon button--padding-right" width="11" height="12" viewBox="0 0 11 12" fill="none"
               xmlns="http://www.w3.org/2000/svg">
               <path d="M10.0698 6.07495L0.157238 11.7041L0.157238 0.445786L10.0698 6.07495Z" fill="#1D2E5B" />
             </svg>
