added styles to directions page

--- a/source/companions.html
+++ b/source/companions.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="page__body">
-  <header class="page-header page-header--height">
+  <header class="page-header page-header--border-radius page-header--height">
     <div class="container page-header__menu  menu">
       <a href="index.html" class="menu__logo-mobile">
         <picture>
