--- a/source/directions.html
+++ b/source/directions.html
@@ -183,7 +183,6 @@
               </text>
               <line class="general-info__level-line" x1="20" y1="50" x2="80" y2="50" stroke="black" />
               <text class="general-info__level-text" x="30" y="70">level</text>
-              Sorry, your browser does not support inline SVG.
             </svg>
           </div>
           <div class="user-info__avatars">
@@ -386,7 +385,7 @@
                     ДН.
                   </div>
                   <div class="step-list__input">
-                    <input id="companions" class="step-list__count text" type="number" value="3" />
+                    <input id="calendar" class="step-list__count text" type="number" value="3" />
                     <svg class="step-list__minus" width="14" height="2" viewBox="0 0 14 2"
                       xmlns="http://www.w3.org/2000/svg">
                       <line y1="1" x2="14" y2="1" />
