--- a/source/index.html
+++ b/source/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 
+<!-- TODO
+  1. Fix tooltips positions
+  2. users__background remove display:none
+-->
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -453,7 +458,8 @@
               </picture>
               <picture>
                 <source media="(min-width: 768px)" srcset="img/back-medium.png 1x, img/back-medium@2x.png 2x">
-                <img src="img/back.svg" srcset="img/back@2x.png 2x" width="226" height="30" alt="Фоновое изображение" />
+                <img class="users__background" src="img/back.svg" srcset="img/back@2x.png 2x" width="226" height="30"
+                  alt="Фоновое изображение" />
               </picture>
             </div>
             <p class="users__description text text--default">Все мы индивидуальны и у каждого свой взгляд на идеальный
@@ -464,7 +470,7 @@
             <li class="users__card-list card-list__item">
               <div class="users__card card-list__card">
                 <picture>
-                  <img class="users__photo" src="img/tany-photo.png" srcset="img/tany-photo@2x.png 2x" width="226"
+                  <img class="users__photo" src="img/tanya-photo.png" srcset="img/tanya-photo@2x.png 2x" width="226"
                     height="30" alt="Фото Тани Фирсовой" />
                 </picture>
                 <div class="users__level general-info__level">
