modified header styles

--- a/source/companions.html
+++ b/source/companions.html
@@ -164,7 +164,13 @@
         </div>
       </div>
     </div>
-    <span class="container text page-header__caption">Попутчики</span>
+    <div class="page-header__caption container">
+      <span class="text">Попутчики</span>
+    </div>
+    <svg class="page-header__underline" width="358" height="8" viewBox="0 0 358 8" fill="none"
+      xmlns="http://www.w3.org/2000/svg">
+      <rect width="358" height="8" rx="4" />
+    </svg>
   </header>
   <main class="page-main page-main--light">
     <section class="filter">
