--- a/source/directions.html
+++ b/source/directions.html
@@ -165,7 +165,13 @@
         </div>
       </div>
     </div>
-    <span class="container text page-header__caption">Направления</span>
+    <div class="page-header__caption container">
+      <span class="text">Направления</span>
+    </div>
+    <svg class="page-header__underline page-header_underline--directions" width="358" height="8" viewBox="0 0 358 8"
+      fill="none" xmlns="http://www.w3.org/2000/svg">
+      <rect width="358" height="8" rx="4" />
+    </svg>
   </header>
   <main class="page-main">
     <h1 class="visually-hidden">Информация о направлениях пользователя</h1>
