--- a/source/index.html
+++ b/source/index.html
@@ -2,7 +2,6 @@
 <html class="page" lang="ru">
 
 <!-- TODO
-  1. Fix tooltips positions
   2. users__background remove display:none
 -->
 
@@ -591,9 +590,9 @@
                       </a>
                     </li>
                     <li class="users__icon icon-list__item">
-                      <a class="users__walk-1 icon-list__link icon--disabled">
-                        <svg class="icon icon--transparent-theme" width="21" height="24" viewBox="0 0 21 24"
-                          xmlns="http://www.w3.org/2000/svg">
+                      <a class="users__walk-1 icon-list__link">
+                        <svg class="icon icon--transparent-theme icon--disabled" width="21" height="24"
+                          viewBox="0 0 21 24" xmlns="http://www.w3.org/2000/svg">
                           <path
                             d="M14.9758 5.75992C15.9264 5.75992 16.697 4.90031 16.697 3.83992C16.697 2.77954 15.9264 1.91992 14.9758 1.91992C14.0252 1.91992 13.2546 2.77954 13.2546 3.83992C13.2546 4.90031 14.0252 5.75992 14.9758 5.75992Z" />
                           <path
