added some styles

--- a/source/index.html
+++ b/source/index.html
@@ -50,13 +50,13 @@
       <nav class="menu__nav main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="text site-list__link site-list__link--light" href="#">О СЕРВИСЕ</a>
+            <a class="text site-list__link link site-list__link--light" href="#">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
-            <a class="text site-list__link site-list__link--light" href="directions.html">НАПРАВЛЕНИЯ</a>
+            <a class="text site-list__link link site-list__link--light" href="directions.html">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="text site-list__link site-list__link--light" href="companions.html">ПОПУТЧИКИ</a>
+            <a class="text site-list__link link site-list__link--light" href="companions.html">ПОПУТЧИКИ</a>
           </li>
         </ul>
       </nav>
@@ -93,13 +93,13 @@
         <nav class="main-menu__nav main-nav">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="text site-list__link" href="#">О СЕРВИСЕ</a>
+              <a class="text site-list__link link" href="#">О СЕРВИСЕ</a>
             </li>
             <li class="site-list__item">
-              <a class="text site-list__link" href="directions.html">НАПРАВЛЕНИЯ</a>
+              <a class="text site-list__link link" href="directions.html">НАПРАВЛЕНИЯ</a>
             </li>
             <li class="site-list__item">
-              <a class="text site-list__link" href="companions.html">ПОПУТЧИКИ</a>
+              <a class="text site-list__link link" href="companions.html">ПОПУТЧИКИ</a>
             </li>
           </ul>
         </nav>
@@ -250,13 +250,13 @@
         <nav class="menu__nav main-nav">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="text site-list__link site-list__link--dark" href="#">О СЕРВИСЕ</a>
+              <a class="text site-list__link link site-list__link--dark" href="#">О СЕРВИСЕ</a>
             </li>
             <li class="site-list__item">
-              <a class="text site-list__link site-list__link--dark" href="directions.html">НАПРАВЛЕНИЯ</a>
+              <a class="text site-list__link link site-list__link--dark" href="directions.html">НАПРАВЛЕНИЯ</a>
             </li>
             <li class="site-list__item">
-              <a class="text site-list__link site-list__link--dark" href="companions.html">ПОПУТЧИКИ</a>
+              <a class="text site-list__link link site-list__link--dark" href="companions.html">ПОПУТЧИКИ</a>
             </li>
           </ul>
         </nav>
@@ -484,7 +484,6 @@
                     <line class="users__level-line general-info__level-line" x1="10" y1="33" x2="50" y2="33"
                       stroke="black" />
                     <text class="users__level-text general-info__level-text" x="15" y="47">level</text>
-
                   </svg>
                 </div>
                 <div class="users__card-info card-list__info">
