--- a/source/directions.html
+++ b/source/directions.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
 
+<!--
+    TODO 1. flag directions remove background. it happends if the selector was opened in mobile mode
+  -->
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -47,13 +51,13 @@
       <nav class="menu__nav main-nav">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="text site-list__link site-list__link--light" href="index.html">О СЕРВИСЕ</a>
+            <a class="text site-list__link link site-list__link--light" href="index.html">О СЕРВИСЕ</a>
           </li>
           <li class="site-list__item">
-            <a class="text site-list__link site-list__link--light" href="#">НАПРАВЛЕНИЯ</a>
+            <a class="text site-list__link link site-list__link--light" href="#">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="site-list__item">
-            <a class="text site-list__link site-list__link--light" href="companions.html">ПОПУТЧИКИ</a>
+            <a class="text site-list__link link site-list__link--light" href="companions.html">ПОПУТЧИКИ</a>
           </li>
         </ul>
       </nav>
@@ -90,13 +94,13 @@
         <nav class="main-menu__nav main-nav">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="text site-list__link" href="index.html">О СЕРВИСЕ</a>
+              <a class="text site-list__link link" href="index.html">О СЕРВИСЕ</a>
             </li>
             <li class="site-list__item">
-              <a class="text site-list__link" href="#">НАПРАВЛЕНИЯ</a>
+              <a class="text site-list__link link" href="#">НАПРАВЛЕНИЯ</a>
             </li>
             <li class="site-list__item">
-              <a class="text site-list__link" href="companions.html">ПОПУТЧИКИ</a>
+              <a class="text site-list__link link" href="companions.html">ПОПУТЧИКИ</a>
             </li>
           </ul>
         </nav>
@@ -218,7 +222,7 @@
             <ul class="dataset__list transport-list">
               <li class="transport-list__item">
                 <button class="button button--togle button--light-theme" type="button">
-                  <svg class="button--active" width="18" height="20" viewBox="0 0 18 20"
+                  <svg class="icon--active" width="18" height="20" viewBox="0 0 18 20"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M15.7831 0.0931421C15.0546 0.266353 14.3227 0.440377 14.0504 0.917233L11.9433 5.11585L0.629163 7.8059L0.170763 9.14743L8.82861 9.96616L7.35967 13.6009L4.07624 14.3816L3.25187 15.8101L5.62062 16.0673L5.89073 17.2357C6.01174 17.6498 6.43649 17.9263 6.79903 17.8401L7.89351 17.5799L9.16224 19.7433L9.98661 18.3148L9.17628 14.8098L11.5535 11.7795L16.0895 19.741L17.0042 18.7031L14.2128 6.62921L16.7762 2.73424C17.0519 2.25657 16.8721 1.47891 16.6914 0.697594C16.6019 0.310588 16.1457 0.0069433 15.7831 0.0931421Z" />
@@ -227,7 +231,7 @@
               </li>
               <li class="transport-list__item">
                 <button class="button button--togle button--light-theme" type="button">
-                  <svg class="button--active" width="18" height="21" viewBox="0 0 18 21"
+                  <svg class="icon--active" width="18" height="21" viewBox="0 0 18 21"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M4.34046 13.9485C4.34046 13.5699 4.20185 13.2467 3.92462 12.9788C3.64739 12.711 3.31288 12.5771 2.92106 12.5771C2.52925 12.5771 2.19473 12.711 1.91751 12.9788C1.64028 13.2467 1.50167 13.5699 1.50167 13.9485C1.50167 14.3271 1.64028 14.6503 1.91751 14.9181C2.19473 15.186 2.52925 15.3199 2.92106 15.3199C3.31288 15.3199 3.64739 15.186 3.92462 14.9181C4.20185 14.6503 4.34046 14.3271 4.34046 13.9485ZM15.6956 13.9485C15.6956 13.5699 15.557 13.2467 15.2798 12.9788C15.0025 12.711 14.668 12.5771 14.2762 12.5771C13.8844 12.5771 13.5499 12.711 13.2727 12.9788C12.9954 13.2467 12.8568 13.5699 12.8568 13.9485C12.8568 14.3271 12.9954 14.6503 13.2727 14.9181C13.5499 15.186 13.8844 15.3199 14.2762 15.3199C14.668 15.3199 15.0025 15.186 15.2798 14.9181C15.557 14.6503 15.6956 14.3271 15.6956 13.9485ZM15.1855 9.70563L14.3871 5.59135C14.3501 5.42706 14.267 5.29313 14.1376 5.18956C14.0082 5.08599 13.8585 5.0342 13.6885 5.0342H3.50878C3.33875 5.0342 3.18905 5.08599 3.05968 5.18956C2.9303 5.29313 2.84714 5.42706 2.81017 5.59135L2.01176 9.70563C1.9748 9.91992 2.02655 10.1092 2.16701 10.2735C2.30747 10.4378 2.48859 10.5199 2.71037 10.5199H14.4869C14.7087 10.5199 14.8898 10.4378 15.0303 10.2735C15.1707 10.1092 15.2225 9.91992 15.1855 9.70563ZM12.6794 3.14849C12.6794 3.00563 12.6276 2.88421 12.5242 2.78421C12.4207 2.68421 12.295 2.63421 12.1471 2.63421H5.05015C4.9023 2.63421 4.77663 2.68421 4.67313 2.78421C4.56963 2.88421 4.51788 3.00563 4.51788 3.14849C4.51788 3.29135 4.56963 3.41278 4.67313 3.51278C4.77663 3.61278 4.9023 3.66278 5.05015 3.66278H12.1471C12.295 3.66278 12.4207 3.61278 12.5242 3.51278C12.6276 3.41278 12.6794 3.29135 12.6794 3.14849ZM17.115 10.9163V17.3771H15.6956V18.7485C15.6956 19.1271 15.557 19.4503 15.2798 19.7181C15.0025 19.986 14.668 20.1199 14.2762 20.1199C13.8844 20.1199 13.5499 19.986 13.2727 19.7181C12.9954 19.4503 12.8568 19.1271 12.8568 18.7485V17.3771H4.34046V18.7485C4.34046 19.1271 4.20185 19.4503 3.92462 19.7181C3.64739 19.986 3.31288 20.1199 2.92106 20.1199C2.52925 20.1199 2.19473 19.986 1.91751 19.7181C1.64028 19.4503 1.50167 19.1271 1.50167 18.7485V17.3771H0.0822754V10.9163C0.0822754 10.1163 0.174684 9.31992 0.359501 8.52706L1.50167 3.66278C1.5682 3.10563 1.9286 2.61635 2.58285 2.19492C3.2371 1.77349 4.08726 1.45564 5.13332 1.24135C6.17939 1.02706 7.33449 0.919922 8.59864 0.919922C9.86279 0.919922 11.0179 1.02706 12.064 1.24135C13.11 1.45564 13.9602 1.77349 14.6144 2.19492C15.2687 2.61635 15.6291 3.10563 15.6956 3.66278L16.86 8.52706C17.03 9.25563 17.115 10.0521 17.115 10.9163Z" />
@@ -251,7 +255,7 @@
               </li>
               <li class="transport-list__item">
                 <button class="button button--togle button--light-theme" type="button">
-                  <svg class="button--active" width="21" height="24" viewBox="0 0 21 24"
+                  <svg class="icon--active" width="21" height="24" viewBox="0 0 21 24"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                       d="M14.9758 5.75992C15.9264 5.75992 16.697 4.90031 16.697 3.83992C16.697 2.77954 15.9264 1.91992 14.9758 1.91992C14.0252 1.91992 13.2546 2.77954 13.2546 3.83992C13.2546 4.90031 14.0252 5.75992 14.9758 5.75992Z"
@@ -1147,7 +1151,7 @@
                   </button>
                   <button type="button"
                     class="add-plans__button-step step-list__previous button button--transparent-theme">
-                    <svg class="add-plans__back button--active" width="10" height="18" viewBox="0 0 10 18"
+                    <svg class="add-plans__back icon--active" width="10" height="18" viewBox="0 0 10 18"
                       xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 9L9.75 0.339745L9.75 17.6603L0 9Z" />
                     </svg>
@@ -1224,7 +1228,7 @@
                 </button>
                 <button type="button"
                   class="add-plans__button-step step-list__previous button button--transparent-theme">
-                  <svg class="add-plans__back button--active" width="10" height="18" viewBox="0 0 10 18"
+                  <svg class="add-plans__back icon--active" width="10" height="18" viewBox="0 0 10 18"
                     xmlns="http://www.w3.org/2000/svg">
                     <path d="M0 9L9.75 0.339745L9.75 17.6603L0 9Z" />
                   </svg>
