--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/style.css" rel="stylesheet">
+  <link rel="icon" href="favicon.png" sizes="16x16" type="image/png">
   <title>Погнали!</title>
 </head>
 
