--- a/source/directions.html
+++ b/source/directions.html
@@ -438,25 +438,25 @@
                 <div class="step-list__days">
                   <table class="step-list__days calendar">
                     <tr>
-                      <th class="calendar__day text">
+                      <th class="calendar__day calendar__header text">
                         <span>П</span>
                       </th>
-                      <th class="calendar__day text">
+                      <th class="calendar__day calendar__header text">
                         <span>В</span>
                       </th>
-                      <th class="calendar__day text">
+                      <th class="calendar__day calendar__header text">
                         <span>С</span>
                       </th>
-                      <th class="calendar__day text">
+                      <th class="calendar__day calendar__header text">
                         <span>Ч</span>
                       </th>
-                      <th class="calendar__day text">
+                      <th class="calendar__day calendar__header text">
                         <span>П</span>
                       </th>
-                      <th class="calendar__day calendar__day--weakened text">
+                      <th class="calendar__day calendar__header calendar__day--weakened text">
                         <span>С</span>
                       </th>
-                      <th class="calendar__day calendar__day--weakened text">
+                      <th class="calendar__day  calendar__header calendar__day--weakened text">
                         <span>В</span>
                       </th>
                     </tr>
